--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "npm run pre:start && next start",
     "docker": "next start",
     "lint": "next lint",
-    "stylelint": "stylelint --fix \"./src/**/*.scss\" && prettier --write \"./src/**/*.scss\""
+    "stylelint": "stylelint --fix \"./src/**/*.scss\" && prettier --write \"./src/**/*.scss\"",
+    "storybook": "start-storybook -p 6006 -s ./public",
+    "build-storybook": "build-storybook -s public"
   },
   "husky": {
     "hooks": {
@@ -64,11 +66,23 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.9",
+    "@geometricpanda/storybook-addon-badges": "^0.2.1",
+    "@storybook/addon-a11y": "^6.4.21",
+    "@storybook/addon-actions": "^6.4.21",
+    "@storybook/addon-essentials": "^6.4.21",
+    "@storybook/addon-links": "^6.4.21",
+    "@storybook/addon-postcss": "^2.0.0",
+    "@storybook/addon-storysource": "^6.4.21",
+    "@storybook/builder-webpack5": "^6.4.21",
+    "@storybook/manager-webpack5": "^6.4.21",
+    "@storybook/react": "^6.4.21",
     "@types/cookies": "^0.7.7",
     "@types/node": "17.0.5",
     "@types/react": "17.0.38",
     "@typescript-eslint/eslint-plugin": "^4.6.0",
     "@typescript-eslint/parser": "^4.6.0",
+    "babel-loader": "^8.2.4",
     "case": "^1.6.3",
     "commitlint": "^11.0.0",
     "commitlint-config-jira": "^1.4.1",
@@ -84,10 +98,20 @@
     "husky": "^3.0.9",
     "lint-staged": "^9.4.3",
     "prettier": "^2.1.2",
+    "storybook-addon-breakpoints": "^1.0.0",
+    "storybook-addon-code-preview": "^0.0.9",
+    "storybook-addon-designs": "^6.2.1",
+    "storybook-addon-measure-viewport": "^0.2.1",
+    "storybook-addon-next": "^1.6.2",
+    "storybook-addon-paddings": "^4.3.0",
+    "storybook-addon-pseudo-states": "^1.9.0",
+    "storybook-color-picker": "^2.3.1",
+    "storybook-dark-mode": "^1.0.9",
     "stylelint": "^13.7.2",
     "stylelint-order": "^4.1.0",
     "stylelint-prettier": "^1.1.2",
     "typescript": "4.5.4",
+    "webpack": "^5.72.0",
     "webpack-merge": "^5.8.0"
   }
 }
