--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "next": "12.0.7",
     "next-i18next": "^10.5.0",
     "object-path": "^0.11.8",
+    "patronum": "^1.8.2",
     "react": "17.0.2",
     "react-device-detect": "^2.1.2",
     "react-dom": "17.0.2",
