add effector-api v1

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_API_URL=https://volonteer-photobank.chatbotsstudio.com/api
+NEXT_PUBLIC_API_URL=http://3.71.19.248:3020/api/v1
 NEXT_PUBLIC_INSTAGRAM_URL=https://instagram.com
 NEXT_PUBLIC_TELEGRAM_URL=https://telegram.com
 NEXT_PUBLIC_FACEBOOK_URL=https://facebook.com
