--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "effector-next": "^1.3.2",
     "effector-react": "^22.0.6",
     "formik": "^2.2.9",
+    "include-media": "^1.4.10",
     "next": "12.0.7",
     "next-i18next": "^10.5.0",
     "object-path": "^0.11.8",
