--- a/.gitignore
+++ b/.gitignore
@@ -26,10 +26,7 @@ yarn-error.log*
 
 # local env files
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+config.json
 
 # vercel
 .vercel
