--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,21 +2,21 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Next.js: debug server-side",
+      "name": "Next:Debug:Server",
       "type": "node-terminal",
       "request": "launch",
       "command": "yarn dev"
     },
 
     {
-      "name": "Next.js: debug client-side",
+      "name": "Next:Debug:Client",
       "type": "pwa-chrome",
       "request": "launch",
       "url": "http://localhost:3000"
     },
 
     {
-      "name": "Next.js: debug full stack",
+      "name": "Next:Debug",
       "type": "node-terminal",
       "request": "launch",
       "command": "yarn dev",
