--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.5.2",
+    "@typescript-eslint/eslint-plugin": "^5.20.0",
     "axios": "^0.26.1",
     "classnames": "^2.3.1",
     "cookies": "^0.8.0",
@@ -80,8 +81,6 @@
     "@types/cookies": "^0.7.7",
     "@types/node": "17.0.5",
     "@types/react": "17.0.38",
-    "@typescript-eslint/eslint-plugin": "^4.6.0",
-    "@typescript-eslint/parser": "^4.6.0",
     "babel-loader": "^8.2.4",
     "case": "^1.6.3",
     "commitlint": "^11.0.0",
@@ -89,6 +88,7 @@
     "commitlint-plugin-jira-rules": "^1.4.0",
     "deepmerge": "^4.2.2",
     "eslint": "^7.12.1",
+    "eslint-config-next": "12.1.5",
     "eslint-config-prettier": "^6.15.0",
     "eslint-loader": "^3.0.2",
     "eslint-plugin-prettier": "^3.1.4",
