--- a/package.json
+++ b/package.json
@@ -68,7 +68,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.17.9",
+    "@feature-sliced/eslint-config": "^0.1.0-beta.6",
     "@geometricpanda/storybook-addon-badges": "^0.2.1",
+    "@next/eslint-plugin-next": "^12.1.6",
     "@storybook/addon-a11y": "^6.4.21",
     "@storybook/addon-actions": "^6.4.21",
     "@storybook/addon-essentials": "^6.4.21",
@@ -87,10 +89,14 @@
     "commitlint-config-jira": "^1.4.1",
     "commitlint-plugin-jira-rules": "^1.4.0",
     "deepmerge": "^4.2.2",
-    "eslint": "^7.12.1",
+    "eslint": "^8.15.0",
     "eslint-config-next": "12.1.5",
     "eslint-config-prettier": "^6.15.0",
     "eslint-loader": "^3.0.2",
+    "eslint-plugin-boundaries": "^2.9.0",
+    "eslint-plugin-effector": "^0.6.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-json": "^3.1.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-sort-imports-es6-autofix": "^0.5.0",
@@ -107,7 +113,7 @@
     "storybook-addon-pseudo-states": "^1.9.0",
     "storybook-color-picker": "^2.3.1",
     "storybook-dark-mode": "^1.0.9",
-    "stylelint": "^13.7.2",
+    "stylelint": "^14.8.2",
     "stylelint-order": "^4.1.0",
     "stylelint-prettier": "^1.1.2",
     "typescript": "4.5.4",
