--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next": "12.0.7",
     "next-i18next": "^10.5.0",
     "object-path": "^0.11.8",
+    "patronum": "^1.8.2",
     "react": "17.0.2",
     "react-device-detect": "^2.1.2",
     "react-dom": "17.0.2",
@@ -51,11 +52,13 @@
     "@types/cookies": "^0.7.7",
     "@types/node": "17.0.5",
     "@types/react": "17.0.38",
+    "autoprefixer": "^10.4.7",
     "babel-loader": "^8.2.4",
     "case": "^1.6.3",
     "commitlint": "^11.0.0",
     "commitlint-config-jira": "^1.4.1",
     "commitlint-plugin-jira-rules": "^1.4.0",
+    "cssnano": "^5.1.7",
     "deepmerge": "^4.2.2",
     "eslint": "^8.15.0",
     "eslint-config-next": "12.1.5",
@@ -71,6 +74,9 @@
     "eslint-plugin-unused-imports": "^1.0.0",
     "husky": "^3.0.9",
     "lint-staged": "^9.4.3",
+    "postcss": "^8.4.13",
+    "postcss-cli": "^9.1.0",
+    "postcss-scss": "^4.0.4",
     "prettier": "^2.1.2",
     "storybook-addon-breakpoints": "^1.0.0",
     "storybook-addon-code-preview": "^0.0.9",
