--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/cookies": "^0.7.7",
     "@types/node": "17.0.5",
     "@types/react": "17.0.38",
+    "@wemake-services/stylelint-config-scss": "^1.0.0",
     "autoprefixer": "^10.4.7",
     "babel-loader": "^8.2.4",
     "case": "^1.6.3",
@@ -88,7 +89,9 @@
     "storybook-color-picker": "^2.3.1",
     "storybook-dark-mode": "^1.0.9",
     "stylelint": "^14.8.2",
-    "stylelint-order": "^4.1.0",
+    "stylelint-config-rational-order": "^0.1.2",
+    "stylelint-high-performance-animation": "^1.6.0",
+    "stylelint-order": "^5.0.0",
     "stylelint-prettier": "^1.1.2",
     "typescript": "4.5.4",
     "webpack": "^5.72.0",
