--- a/package.json
+++ b/package.json
@@ -93,7 +93,9 @@
     "stylelint-high-performance-animation": "^1.6.0",
     "stylelint-order": "^5.0.0",
     "stylelint-prettier": "^1.1.2",
+    "stylelint-scss": "^4.2.0",
     "typescript": "4.5.4",
+    "typescript-plugin-css-modules": "^3.4.0",
     "webpack": "^5.72.0",
     "webpack-merge": "^5.8.0"
   }
