--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.17.9",
+    "@commitlint/cli": "^16.3.0",
+    "@commitlint/config-conventional": "^16.2.4",
     "@feature-sliced/eslint-config": "^0.1.0-beta.6",
     "@geometricpanda/storybook-addon-badges": "^0.2.1",
     "@next/eslint-plugin-next": "^12.1.6",
