--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
       "git add"
     ]
   },
+  
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged",
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+      "commit-msg": "commitlint --edit $1"
     }
-  },
+  }
+
+
   "dependencies": {
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
