--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint --fix",
     "stylelint": "stylelint --fix \"./src/**/*.scss\"",
     "storybook": "start-storybook -p 6006 -s ./public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "prepare": "husky install"
   },
   "lint-staged": {
     "src/**/*.{ts,tsx}": [
@@ -85,7 +86,7 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-sort-imports-es6-autofix": "^0.5.0",
     "eslint-plugin-unused-imports": "^1.0.0",
-    "husky": "^8.0.1",
+    "husky": "^8.0.0",
     "lint-staged": "^9.4.3",
     "postcss": "^8.4.13",
     "postcss-cli": "^9.1.0",
