--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "stylelint": "stylelint --fix \"./src/**/*.scss\"",
     "storybook": "start-storybook -p 6006 -s ./public",
     "build-storybook": "build-storybook -s public",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "pre-commit": "lint-staged"
   },
   "lint-staged": {
     "src/**/*.{ts,tsx}": [
