--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "classnames": "^2.3.1",
     "cookies": "^0.8.0",
     "effector": "^22.2.0",
-    "effector-next": "^1.3.2",
     "effector-react": "^22.0.6",
     "formik": "^2.2.9",
     "include-media": "^1.4.10",
@@ -109,6 +108,7 @@
     "stylelint-scss": "^4.2.0",
     "typescript": "4.5.4",
     "typescript-plugin-css-modules": "^3.4.0",
+    "unimported": "^1.20.0",
     "webpack": "^5.72.0",
     "webpack-merge": "^5.8.0"
   }
