--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@storybook/builder-webpack5": "^6.4.21",
     "@storybook/manager-webpack5": "^6.4.21",
     "@storybook/react": "^6.4.21",
+    "@types/cookie": "^0.5.1",
     "@types/cookies": "^0.7.7",
     "@types/node": "17.0.5",
     "@types/react": "17.0.38",
