--- a/package.json
+++ b/package.json
@@ -29,22 +29,24 @@
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.5.2",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
-    "axios": "^0.26.1",
+    "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "cookies": "^0.8.0",
     "effector": "^22.2.0",
     "effector-react": "^22.0.6",
     "formik": "^2.2.9",
+    "i18next": "^21.8.5",
     "include-media": "^1.4.10",
     "next": "12.0.7",
     "next-i18next": "^10.5.0",
     "next-seo": "^5.4.0",
     "object-path": "^0.11.8",
+    "object-path-immutable": "^4.1.2",
     "patronum": "^1.8.2",
     "react": "17.0.2",
     "react-device-detect": "^2.1.2",
     "react-dom": "17.0.2",
-    "react-i18next": "^11.16.6",
+    "react-i18next": "^11.16.9",
     "sass": "^1.45.2",
     "yup": "^0.32.11"
   },
@@ -67,6 +69,7 @@
     "@types/cookie": "^0.5.1",
     "@types/cookies": "^0.7.7",
     "@types/node": "17.0.5",
+    "@types/object-path": "^0.11.1",
     "@types/react": "17.0.38",
     "@wemake-services/stylelint-config-scss": "^1.0.0",
     "autoprefixer": "^10.4.7",
