--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "next-based-template",
   "private": true,
   "scripts": {
-
     "pre:start": "yarn generate:locale-structure-type",
     "dev": "yarn pre:start && next dev",
     "build": "yarn pre:start && tsc --noEmit && next build",
-    "start": "yarn pre:start next start",
+    "start": "yarn pre:start && next start",
     "docker": "yarn pre:start && generate:locale-structure-type next start",
     "lint": "eslint \"./src/**/*.{ts,tsx}\" --fix",
     "generate:locale-structure-type": "node ./scripts/generate-locale-paths && eslint ./src/shared/types/locale-structure.ts --fix",
@@ -45,6 +44,7 @@
     "quicktype-core": "^6.0.71",
     "react-device-detect": "^2.1.2",
     "react-i18next": "^11.16.9",
+    "tailwindcss": "^3.0.24",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -91,7 +91,7 @@
     "eslint-plugin-unused-imports": "^1.0.0",
     "husky": "^8.0.0",
     "lint-staged": "^9.4.3",
-    "postcss": "^8.4.13",
+    "postcss": "^8.4.14",
     "postcss-cli": "^9.1.0",
     "postcss-scss": "^4.0.4",
     "prettier": "^2.1.2",
