--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "classnames": "^2.3.1",
     "effector": "^22.3.0",
     "effector-react": "^22.0.6",
+    "effector-view": "^1.0.16",
     "next": "12.1.6",
     "next-seo": "^5.4.0",
     "patronum": "^1.8.2",
