--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "effector-view": "^1.0.41",
     "next": "12.1.6",
     "next-seo": "^5.4.0",
+    "nextjs-effector": "^0.1.1",
     "patronum": "^1.8.2",
     "react": "18.1.0",
     "react-dom": "18.1.0"
