feat: theme, docs, todo, factories

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nextjs-effector": "^0.2.0",
     "patronum": "^1.8.2",
     "react": "18.1.0",
+    "react-device-detect": "^2.2.2",
     "react-dom": "18.1.0"
   },
   "devDependencies": {
