--- a/package.json
+++ b/package.json
@@ -3,14 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "pre:start": "tsc --noEmit",
+    "dev": "yarn pre:start && next dev",
+    "build": "yarn pre:start && next build",
+    "start": "yarn pre:start && next start",
+    "docker": "yarn pre:start && generate:locale-structure-type next start",
+    "lint": "eslint \"./src/**/*.{ts,tsx}\" --fix",
+    "generate:locale-structure-type": "node ./scripts/generate-locale-paths && eslint ./src/shared/types/locale-structure.ts --fix",
+    "stylelint": "stylelint --fix \"./src/**/*.scss\"",
+    "storybook": "start-storybook -p 6006 -s ./public",
+    "build-storybook": "build-storybook -s public",
+    "postinstall`": "husky install",
+    "pre-commit": "lint-staged",
+    "check:unused-deps": "unimported"
+  },
+  "lint-staged": {
+    "src/**/*.{ts,tsx}": [
+      "yarn lint"
+    ],
+    "src/**/*.scss": [
+      "yarn stylelint"
+    ]
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "effector": "^22.3.0",
+    "effector-http-api": "^0.1.1",
     "effector-react": "^22.0.6",
     "effector-view": "^1.0.41",
     "next": "12.1.6",
@@ -84,6 +103,7 @@
     "stylelint-order": "^5.0.0",
     "stylelint-prettier": "^2.0.0",
     "stylelint-scss": "^4.2.0",
+    "swagger-typescript-api": "^9.3.1",
     "typescript": "^4.7.3",
     "typescript-plugin-css-modules": "^3.4.0",
     "unimported": "^1.20.1",
