--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "build-storybook": "build-storybook -s public",
     "postinstall`": "husky install",
     "pre-commit": "lint-staged",
-    "check:unused-deps": "unimported"
+    "check:unused-deps": "unimported",
+    "codegen-api": "node ./scripts/codegen-api.js"
   },
   "lint-staged": {
     "src/**/*.{ts,tsx}": [
