--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "eslint \"./src/**/*.{ts,tsx}\" --fix",
     "generate:locale-structure-type": "node ./scripts/generate-locale-paths && eslint ./src/shared/types/locale-structure.ts --fix",
     "stylelint": "stylelint --fix \"./src/**/*.scss\"",
-    "storybook": "start-storybook -p 6006 -s ./public",
+    "storybook": "start-storybook -p 6006 --no-manager-cache",
     "build-storybook": "build-storybook -s public",
     "postinstall`": "husky install",
     "pre-commit": "lint-staged",
@@ -57,17 +57,19 @@
     "@storybook/addon-storysource": "^6.5.6",
     "@storybook/builder-webpack5": "^6.5.6",
     "@storybook/manager-webpack5": "^6.5.6",
+    "@storybook/react": "^6.5.9",
     "@types/node": "17.0.39",
     "@types/object-path": "^0.11.1",
     "@types/react": "18.0.10",
     "@types/react-dom": "18.0.5",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@wemake-services/stylelint-config-scss": "^1.0.0",
-    "autoprefixer": "^10.4.7",
+    "autoprefixer": "9.0.0",
     "babel-loader": "^8.2.5",
     "case": "^1.6.3",
     "commitlint-config-jira": "^1.6.4",
     "commitlint-plugin-jira-rules": "^1.6.4",
+    "copy-to-clipboard": "^3.3.1",
     "cssnano": "^5.1.11",
     "deepmerge": "^4.2.2",
     "eslint": "^8.17.0",
