--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "husky": "^8.0.1",
+    "include-media": "^1.4.10",
     "lint-staged": "^13.0.0",
     "postcss": "^8.4.14",
     "postcss-cli": "^9.1.0",
