fix: npm scripts

--- a/package.json
+++ b/package.json
@@ -3,28 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "pre:start": "tsc --noEmit",
-    "dev": "yarn pre:start && next dev",
-    "build": "yarn pre:start && next build",
-    "start": "yarn pre:start && next start",
-    "docker": "yarn pre:start && generate:locale-structure-type next start",
-    "lint": "eslint \"./src/**/*.{ts,tsx}\" --fix",
-    "generate:locale-structure-type": "node ./scripts/generate-locale-paths && eslint ./src/shared/types/locale-structure.ts --fix",
-    "stylelint": "stylelint --fix \"./src/**/*.scss\"",
-    "storybook": "start-storybook -p 6006 --no-manager-cache",
-    "build-storybook": "build-storybook -s public",
+    "gen:api": "node ./scripts/codegen-api.js",
+    "gen:svg": "node ./scripts/watch-svg.js",
+
+    "validate:eslint": "eslint \"./src/**/*.{ts,tsx}\" --fix",
+    "validate:stylelint": "stylelint --fix \"./src/**/*.scss\"",
+    "validate:deps": "unimported",
+
+    "storybook:build": "build-storybook -s public",
+    "storybook:start": "start-storybook -p 6006 --no-manager-cache",
+
+    "app:prepare": "gen:api && gen:svg && tsc --noEmit",
+    "app:dev": "yarn pre:start && next dev",
+    "app:build": "yarn pre:start && next build",
+    "app:start": "yarn pre:start && next start",
+
     "postinstall`": "husky install",
-    "pre-commit": "lint-staged",
-    "check:unused-deps": "unimported",
-    "codegen-api": "node ./scripts/codegen-api.js",
-    "codegen-svg": "node ./scripts/watch-svg.js"
+    "pre-commit": "lint-staged"
   },
   "lint-staged": {
     "src/**/*.{ts,tsx}": [
-      "yarn lint"
+      "yarn validate:eslint"
     ],
     "src/**/*.scss": [
-      "yarn stylelint"
+      "yarn validate:stylelint"
     ]
   },
   "dependencies": {
