--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "app:dev": "yarn app:prepare && concurrently \"yarn app:watchers\" \"next dev\" --names \"watchers,app\"",
     "app:build": "yarn app:prepare && next build",
     "app:start": "yarn app:prepare && next start",
-    "postinstall`": "husky install",
+    "postinstall": "husky install",
     "pre-commit": "lint-staged"
   },
   "lint-staged": {
